<resources>
    <string name="app_name">Mr. Potato Head</string>
    <string name="description">What should this potato wear?</string>
    <string name="arms">Arms</string>
    <string name="body">Body</string>
    <string name="ears">Ears</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="eyes">Eyes</string>
    <string name="glasses">Glasses</string>
    <string name="hat">Hat</string>
    <string name="mouth">Mouth</string>
    <string name="mustache">Mustache</string>
    <string name="nose">Nose</string>
    <string name="shoes">Shoes</string>
    <string name="reset">Clear</string>
</resources>
